--- a/web/package.json
+++ b/web/package.json
@@ -65,6 +65,7 @@
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/eslint-config-prettier": "^6.11.3",
     "@types/eslint__js": "^9.14.0",
+    "@types/js-cookie": "^3.0.6",
     "@vitest/browser": "^3.0.7",
     "babel-preset-solid": "^1.9.5",
     "eslint": "^9.21.0",
@@ -78,7 +79,7 @@
     "husky": "^9.1.7",
     "jsdom": "^26.0.0",
     "openapi-typescript": "^7.6.1",
-    "oxlint": "^0.15.13",
+    "oxlint": "^0.16.0",
     "playwright": "^1.50.1",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
@@ -88,7 +89,7 @@
     "storybook-solidjs-vite": "^1.0.0-beta.6",
     "tailwindcss": "^4.0.9",
     "typescript": "^5.8.2",
-    "typescript-eslint": "^8.26.0",
+    "typescript-eslint": "^8.27.0",
     "vite": "^6.2.0",
     "vite-plugin-solid": "^2.11.6",
     "vite-tsconfig-paths": "^5.1.4"
