--- a/web/.prettierignore
+++ b/web/.prettierignore
@@ -3,7 +3,9 @@
 dist
 node_modules
 public
+
 src/assets
+src/routeTree.gen.ts
 
 src/style/shadow/shadow_default.css
 src/style/shadow/shadow_oklab.css
