--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -102,6 +102,7 @@ serde_with = { version = "3.12.0", features = [
 smart-default = "0.7.1"
 strum = "0.27.0"
 strum_macros = "0.27.0"
+thiserror = "2.0.12"
 tikv-jemallocator = "0.6.0"
 tokio.workspace = true
 tower = { version = "0.5.2", features = [
@@ -127,12 +128,13 @@ xxhash-rust = { version = "0.8", features = [
     "xxh3",
 ] }
 zxcvbn = "3.1"
+
 [dev-dependencies]
 rusty-hook = "0.11.2"
 
 # https://doc.rust-lang.org/cargo/reference/profcailes.html
 [profile.dev]
-codegen-backend = "llvm"
+# codegen-backend = "cranelift"
 opt-level       = 1
 split-debuginfo = "unpacked"
 
