--- a/server/proc_macros/Cargo.toml
+++ b/server/proc_macros/Cargo.toml
@@ -11,4 +11,4 @@ darling             = "0.20.0"
 itertools.workspace = true
 proc-macro2         = "1.0.93"
 quote               = "1.0.38"
-syn                 = { version = "2.0.98", features = [ "full" ] }
+syn.workspace       = true
