--- a/web/package.json
+++ b/web/package.json
@@ -32,6 +32,7 @@
     "@tanstack/solid-query-devtools": "^5.67.1",
     "@tanstack/solid-router": "^1.114.23",
     "arktype": "^2.1.2",
+    "cropperjs": "^2.0.0",
     "daisyui": "^5.0.0",
     "dayjs": "^1.11.13",
     "js-cookie": "^3.0.5",
@@ -43,7 +44,7 @@
     "solid-popper": "^0.3.0",
     "solid-radix-icons": "^1.0.0",
     "tailwind-merge": "^3.0.2",
-    "valibot": "1.0.0-rc.3"
+    "valibot": "1.0.0"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.5",
@@ -76,6 +77,7 @@
     "eslint-plugin-solid": "^0.14.5",
     "eslint-plugin-storybook": "^0.11.3",
     "globals": "^16.0.0",
+    "hotscript": "^1.0.13",
     "husky": "^9.1.7",
     "jsdom": "^26.0.0",
     "openapi-typescript": "^7.6.1",
