--- a/web/.prettierrc.yaml
+++ b/web/.prettierrc.yaml
@@ -6,6 +6,7 @@ importOrder:
   - "^[../]"
   - "^[./]"
 importOrderSeparation: true
+tailwindStylesheet: "./src/index.css"
 plugins:
-  - prettier-plugin-tailwindcss
   - "@trivago/prettier-plugin-sort-imports"
+  - prettier-plugin-tailwindcss
