Tailwind vscode plugin settings

--- a/web/.vscode/settings.json
+++ b/web/.vscode/settings.json
@@ -17,5 +17,6 @@
     ["@tw\\s\\*?\\/?[\\s\\S]+?[']([^']*)"],
     ["@tw\\s\\*?\\/?[\\s\\S]+?[`]([^`]*)"],
     ["@tw\\s\\*?\\/?[\\s\\S]+?[\"]([^\"]*)"]
-  ]
+  ],
+  "tailwindCSS.classFunctions": ["twMerge"]
 }
