--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -136,7 +136,7 @@ xxhash-rust = { version = "0.8", features = [
 ] }
 zxcvbn = "3.1"
 
-[target.x86_64-unknown-linux-gnu.dependencies]
+[target.'cfg(target_os = "linux")'.dependencies]
 tikv-jemallocator = "0.6.0"
 
 [dev-dependencies]
