--- a/web/.github/ISSUE_TEMPLATE/todo-task.yml
+++ b/web/.github/ISSUE_TEMPLATE/todo-task.yml
@@ -45,7 +45,7 @@ body:
     id: priority
     attributes:
       label: 🚦 优先级
-      default: 中
+      default: 1
       options:
         - 高
         - 中
