--- a/web/.github/workflows/auto-create-branch.yml
+++ b/web/.github/workflows/auto-create-branch.yml
@@ -10,10 +10,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout main branch
+    - name: Checkout dev branch
       uses: actions/checkout@v4
       with:
-        ref: main
+        ref: dev
 
     - name: Set up Git config
       run: |
