--- a/web/.github/ISSUE_TEMPLATE/todo-task.yml
+++ b/web/.github/ISSUE_TEMPLATE/todo-task.yml
@@ -1,7 +1,7 @@
 name: 📝 Todo Task
 description: 用于创建开发/实现任务，会自动添加标签并创建分支
 title: "Task: "
-labels: ["task"]
+labels: ["Todo Task"]
 assignees:
   - your-github-username  # 可选
 
