--- a/server/proc_macros/Cargo.toml
+++ b/server/proc_macros/Cargo.toml
@@ -10,5 +10,5 @@ proc-macro = true
 darling             = "0.20.0"
 itertools.workspace = true
 proc-macro2         = "1.0.93"
-quote               = "1.0.38"
+quote.workspace     = true
 syn.workspace       = true
