Add index.css to tailwindcss editor plugin config

--- a/web/.vscode/settings.json
+++ b/web/.vscode/settings.json
@@ -18,5 +18,6 @@
     ["@tw\\s\\*?\\/?[\\s\\S]+?[`]([^`]*)"],
     ["@tw\\s\\*?\\/?[\\s\\S]+?[\"]([^\"]*)"]
   ],
-  "tailwindCSS.classFunctions": ["twMerge"]
+  "tailwindCSS.classFunctions": ["twMerge"],
+  "tailwindCSS.experimental.configFile": "src/index.css"
 }
