--- a/web/.prettierrc.yaml
+++ b/web/.prettierrc.yaml
@@ -1,6 +1,7 @@
 experimentalTernaries: true
 semi: false
 singleAttributePerLine: true
+useTabs: true
 importOrder:
   - <THIRD_PARTY_MODULES>
   - "^[../]"
@@ -10,3 +11,7 @@ tailwindStylesheet: "./src/index.css"
 plugins:
   - "@trivago/prettier-plugin-sort-imports"
   - prettier-plugin-tailwindcss
+overrides:
+  - files: "*.yaml"
+    options:
+      tabWidth: 2
