--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -109,6 +109,7 @@ lettre = { version = "0.11.14", default-features = false, features = [
 rand = "0.9.0"
 regex = "1.11"
 sea-orm.workspace = true
+sea-orm-migration.workspace = true
 serde.workspace = true
 serde_json = "1.0"
 serde_repr = "0.1"
