--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -172,5 +172,7 @@ overflow-checks = true
 panic           = "abort"
 
 [patch.crates-io]
-sea-orm           = { git = "https://github.com/Huliiiiii/sea-orm", branch = "mod-rs-pattern", package = "sea-orm" }
 sea-orm-migration = { git = "https://github.com/Huliiiiii/sea-orm", branch = "mod-rs-pattern", package = "sea-orm-migration" }
+
+[patch.'https://github.com/Huliiiiii/sea-orm']
+sea-orm = { version = "1.1.10" }
