--- a/server/.github/workflows/deploy.yml
+++ b/server/.github/workflows/deploy.yml
@@ -6,6 +6,10 @@ on:
       - dev
   workflow_dispatch:
 
+env:
+  RUSTC_WRAPPER: "sccache"
+  SCCACHE_GHA_ENABLED: "true"
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
