--- a/server/.github/workflows/deploy.yml
+++ b/server/.github/workflows/deploy.yml
@@ -14,6 +14,10 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
 
+    concurrency:
+      group: "deploy-dev-server-${{ github.ref }}"
+      cancel-in-progress: true
+
     steps:
     - name: Checkout source
       uses: actions/checkout@v4
