Fix concurrency group

--- a/server/.github/workflows/deploy.yml
+++ b/server/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
 
     concurrency:
-      group: "deploy-dev-server-${{ github.ref }}"
+      group: "deploy-dev-server"
       cancel-in-progress: true
 
     steps:
