--- a/server/.github/workflows/deploy.yml
+++ b/server/.github/workflows/deploy.yml
@@ -33,7 +33,7 @@ jobs:
       run: |
         mkdir -v -m 700 $HOME/.ssh
         ssh-keyscan -H ${{ secrets.DEV_SSH_HOST }} >> $HOME/.ssh/known_hosts
-        echo "${{ secrets.DEV_SSH_KEY }}" > $HOME/.ssh/id_rsa
+        echo "${{ secrets.DEV_SSH_PRIVATE_KEY }}" > $HOME/.ssh/id_rsa
         chmod 600 $HOME/.ssh/id_rsa
 
     - name: Copy binary to server
