--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -155,9 +155,8 @@ xxhash-rust = { version = "0.8", features = [
     "xxh3",
 ] }
 zxcvbn = "3.1"
-
-[target.'cfg(unix)'.dependencies]
-tikv-jemallocator = "0.6.0"
+# Optional
+tikv-jemallocator = { version = "0.6.0", optional = true }
 
 [dev-dependencies]
 rusty-hook = "0.11.2"
@@ -178,3 +177,8 @@ lto             = "thin"
 opt-level       = 3
 overflow-checks = true
 panic           = "abort"
+
+[features]
+release = [
+    "tikv-jemallocator",
+]
