Replace `async-std` of migration crate with `tokio`

--- a/server/migration/Cargo.toml
+++ b/server/migration/Cargo.toml
@@ -9,8 +9,5 @@ name = "migration"
 path = "src/lib.rs"
 
 [dependencies]
-async-std = { version = "1", features = [
-    "attributes",
-    "tokio1",
-] }
 sea-orm-migration.workspace = true
+tokio.workspace             = true
