--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -170,20 +170,16 @@ rusty-hook = "0.11.2"
 
 # https://doc.rust-lang.org/cargo/reference/profcailes.html
 [profile.dev]
-debug     = 0
-opt-level = 3
+codegen-backend = "cranelift"
+debug           = 0
+opt-level       = 3
 
 [profile.dev.build-override]
 opt-level = 3
 
-[profile.fast]
-codegen-backend = "cranelift"
-debug           = 0
+[profile.ra]
 inherits        = "dev"
-opt-level       = 3
-
-[profile.test]
-inherits = "fast"
+codegen-backend = "llvm"
 
 [profile.release]
 codegen-units   = 1
