--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -74,7 +74,9 @@ macros.workspace    = true
 migration.workspace = true
 #
 ammonia = "4.0.0"
-argon2.features = [ "std" ]
+argon2.features = [
+    "std",
+]
 argon2.workspace = true
 async-trait = { version = "0.1" }
 axum.workspace = true
@@ -92,6 +94,7 @@ bytesize = { version = "2.0.1", features = [
 chrono.workspace = true
 config = { version = "0.15.8", features = [
     "ron",
+    "toml",
 ], default-features = false }
 derive_more = { version = "2.0.1", features = [
     "display",
@@ -164,6 +167,7 @@ xxhash-rust = { version = "0.8", features = [
 ] }
 zxcvbn = "3.1"
 # Optional
+nestify           = "0.3.3"
 tikv-jemallocator = { version = "0.6.0", optional = true }
 
 [dev-dependencies]
