--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -136,9 +136,13 @@ sea-orm-migration.workspace = true
 serde.workspace = true
 serde_json = "1.0"
 serde_repr = "0.1"
-serde_with = { version = "3.12.0", features = [ "chrono_0_4" ] }
+serde_with = { version = "3.12.0", features = [
+    "chrono_0_4",
+] }
 smart-default = "0.7.1"
-strum = "0.27.0"
+strum = { version = "0.27", features = [
+    "derive",
+] }
 strum_macros = "0.27.0"
 thiserror = "2.0.12"
 tokio.workspace = true
