Enable incremental compilation by default

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -182,9 +182,10 @@ rusty-hook = "0.11.2"
 [profile.dev]
 codegen-backend = "cranelift"
 debug           = 0
-incremental     = false
 opt-level       = 1
 strip           = "debuginfo"
+# If you get incremental compilation ICE, disable it
+# incremental     = false
 
 [profile.dev.build-override]
 opt-level = 3
