--- a/web/renovate.json
+++ b/web/renovate.json
@@ -1,4 +1,7 @@
 {
 	"$schema": "https://docs.renovatebot.com/renovate-schema.json",
-	"extends": ["config:recommended", ":semanticCommitsDisabled"]
+	"extends": ["config:recommended", ":semanticCommitsDisabled"],
+	"prConcurrentLimit": 0,
+	"stabilityDays": 3,
+	"baseBranches": ["main"]
 }
