Switch base branch to main

--- a/server/.vscode/settings.json
+++ b/server/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "rust-analyzer.cargo.extraArgs": ["--profile", "ra"]
+  "rust-analyzer.cargo.extraArgs": ["--profile", "ra"],
+  "rust-analyzer.cargo.targetDir": true
 }
