--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -8,6 +8,7 @@ RUN cargo build --release
 
 FROM debian:bookworm-slim@sha256:4b50eb66f977b4062683ff434ef18ac191da862dbe966961bc11990cf5791a8d
 
+RUN apt-get update && apt-get install
 
 
 COPY --from=builder /app/target/release/thcdb_rs /usr/local/bin/thcdb_rs
