--- a/server/.cargo/config.toml
+++ b/server/.cargo/config.toml
@@ -1,6 +1,12 @@
 [unstable]
 codegen-backend = true
 
+[profile.dev]
+codegen-backend = "cranelift"
+
+[profile.ra]
+codegen-backend = "llvm"
+
 [target.x86_64-unknown-linux-gnu]
 linker = "clang"
 rustflags = [
